--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
+    <title>Document</title></head
+  >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique dicta
+  laboriosam rem natus dolor minus cumque sit voluptatum, minima enim, quaerat
+  cupiditate corrupti aut nam iure sapiente quasi provident quod?
   <body>
-    <h1>first heading</h1>
-    <p>this is par</p>
+    <h1>first heading </h1>
+    <p></p>
   </body>
 </html>
