added new heading

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title></head
-  >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique dicta
-  laboriosam rem natus dolor minus cumque sit voluptatum, minima enim, quaerat
-  cupiditate corrupti aut nam iure sapiente quasi provident quod?
+    <title>Document</title>
+  </head>
   <body>
-    <h1>first heading </h1>
-    <p></p>
+    <h1>first heading</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas nemo
+      ratione fugiat nam, dolorem sed id veritatis possimus voluptatibus, eius
+      consequuntur molestiae repellat debitis cupiditate numquam quo. Culpa,
+      cumque totam.
+    </p>
+    <h1>added new heading</h1>
   </body>
 </html>
