--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-#lets study html
+<!-- #lets study html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,6 +14,8 @@
       consequuntur molestiae repellat debitis cupiditate numquam quo. Culpa,
       cumque totam.
     </p>
-    <h1>added new heading</h1>
+    <!-- <h1>added new heading</h1> -->
+    <!-- <p>added new paragraph</p> -->
+    <!-- <a href="https://www.w3schools.com/tags/tag_a.asp">this is link of youtube</a> -->
   </body>
 </html>
