--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- <script></script> -->
   </head>
   <body>
+    <script src="/script.js"></script>
+    <style>
+      abbr {
+        display: inline;
+      }
+    </style>
     <h1>first heading</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas nemo
@@ -17,5 +24,11 @@
     <!-- <h1>added new heading</h1> -->
     <!-- <p>added new paragraph</p> -->
     <!-- <a href="https://www.w3schools.com/tags/tag_a.asp">this is link of youtube</a> -->
+    <p>
+      The <abbr title="World Health Organization">WHO</abbr> was founded in
+      1948.
+    </p>
+    <abbr title="SARTHAK BHACLCHADRA CHAUDAHRI">SBC</abbr>
+    <img src="" alt="" />
   </body>
 </html>
