--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         display: inline;
       }
     </style>
-    <h1>first heading</h1>
+    <h1>second heading</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas nemo
       ratione fugiat nam, dolorem sed id veritatis possimus voluptatibus, eius
