--- a/index.html
+++ b/index.html
@@ -5,30 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <!-- <script></script> -->
   </head>
   <body>
     <script src="/script.js"></script>
-    <style>
-      abbr {
-        display: inline;
-      }
-    </style>
-    <h1>second heading</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas nemo
-      ratione fugiat nam, dolorem sed id veritatis possimus voluptatibus, eius
-      consequuntur molestiae repellat debitis cupiditate numquam quo. Culpa,
-      cumque totam.
-    </p>
-    <!-- <h1>added new heading</h1> -->
-    <!-- <p>added new paragraph</p> -->
-    <!-- <a href="https://www.w3schools.com/tags/tag_a.asp">this is link of youtube</a> -->
-    <p>
-      The <abbr title="World Health Organization">WHO</abbr> was founded in
-      1948.
-    </p>
-    <abbr title="SARTHAK BHACLCHADRA CHAUDAHRI">SBC</abbr>
-    <img src="" alt="" />
+   <h1 id="name">Sarthak Chaudhari</h1>
+    
   </body>
 </html>
