--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-<!-- #lets study html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- <script></script> -->
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="/script.js"></script>
-   <h1 id="name">Sarthak Chaudhari</h1>
-    
+    <script src="./script.js"></script>
+
+    <!-- <button id="button">click me</button> -->
+    <button id="date">the date is </button>
+    <div id="div"></div>
   </body>
 </html>
