--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="first">this is div with width </div>
+    <div id="second">this is div with max width</div>
     <script src="./script.js"></script>
-
-    <!-- <button id="button">click me</button> -->
-    <button id="date">the date is </button>
-    <div id="div"></div>
   </body>
 </html>
